syntax = "proto3";

package raft;

enum CommandType {
    UNKNOWN = 0;
    GET = 1;
    DELETE = 2;
    PUT = 3;
}

message Entry {
    int32 index = 1;
    int32 term = 2;
    CommandType type = 3;
    string key = 4;
    bytes value = 5;
}

message RequestVoteArgs {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteReply {
    int32 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesArgs {
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated Entry entries = 5;
    int32 leaderCommit = 6;
}

message AppendEntriesReply {
    int32 term = 1;
    bool success = 2;
}
 

service RaftService {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);

  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
}